# tui_music

./: .gitignore  100_percent_human_description.txt  AGENTS.md  COMPETITOR_COMPARISON.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TERMINAL_COMPATIBILITY.md  dont_forget.txt  todo.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
docs/: index.html  script.js  sitemap.xml  style.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: playback_commands.rs
scripts/: verify.ps1  verify.sh
src/: app.rs  config.rs  core.rs  lib.rs  library.rs  lyrics.rs  main.rs  model.rs  online.rs  online_net.rs  stats.rs  ui.rs
src/audio/: mod.rs
tests/: core_flow.rs  online_relay.rs
