[package]
name = "tune"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
rand = "0.10.1"
rodio = "0.22.2"
base64 = "0.22.1"
arboard = "3.6.1"
sha2 = "0.11.0"
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "adpcm", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
time = { version = "0.3.47", features = ["local-offset"] }
unicode-normalization = "0.1.25"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
lofty = "0.24.0"
unsafe-libopus = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.4", default-features = false, features = ["blocking", "tokio"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
tempfile = "3.27.0"
proptest = "1.11.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
